--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,15 @@
 #container{
 	margin:20px;
 }
-#container>p:first-child{
+#container>p:nth-child(2){
+	color:rgb(255,0,0);
+	font-size:20px;
+}
+#container>div:first-child{
 	color:rgb(255,0,0);
 	font-size:20px;
 }
 #container>p:last-child{
-	color:#f00;
+	color:rgb(255,0,0);
 	font-size:20px;
 }
