--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,11 @@
 #container{
 	margin:20px;
 }
-#container>p:nth-child(2){
+#container>p>span:first-child{
 	color:rgb(255,0,0);
 	font-size:20px;
 }
-#container>div:first-child{
-	color:rgb(255,0,0);
-	font-size:20px;
-}
-#container>p:last-child{
+#container>p>span:last-child{
 	color:rgb(255,0,0);
 	font-size:20px;
 }
