--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
 	margin:20px;
 }
 #container>p>span:first-child{
-	color:rgb(255,0,0);
+	color:#f00;
 	font-size:20px;
 }
 #container>p>span:last-child{
-	color:rgb(255,0,0);
+	color:#f00;
 	font-size:20px;
 }
