--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,7 @@
 #container{
 	margin:20px;
 }
-#container>p>#before{
-	color:#f00;
-	font-size:20px;
-}
-#container>p>#after{
+.before,.after{
 	color:#f00;
 	font-size:20px;
 }
