--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,14 @@
 #container{
 	margin:20px;
 }
-#container>p>.before,#container>p>.after{
+#container::before{
+	content: "Before Element";
+	color:#f00;
+	font-size:20px;
+}
+
+#container::after{
+	content: "After Element";
 	color:#f00;
 	font-size:20px;
 }
